[tool.poetry]
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
description = "Template for Python projects"
name = "python_template"
packages = [{ include = "python_template" }]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
alibi = "^0.9.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
jupyter = "^1.0.0"
mypy = "^1.9.0"
poetry-plugin-export = "^1.7.1"
pylint = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
