[tool.poetry]
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
description = "Template for Python projects"
name = "python_template"
packages = [{ include = "python_template" }]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
alibi = "^0.9.5"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
pandas = "^2.2.2"
plotly = "^5.21.0"
pytest = "^8.1.1"
scikit-learn = "^1.4.2"
transformer-lens = "^1.15.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
jupyter = "^1.0.0"
mypy = "^1.9.0"
poetry-plugin-export = "^1.7.1"
pylint = "^3.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
